--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,164 @@
-Bio==1.7.1
-biopython==1.83
+ace_tools==0.0
+altair==5.2.0
+annotated-types==0.7.0
+anyio==4.4.0
+asttokens==2.4.1
+attrs==23.2.0
+aws-shell==0.2.2
+awscli==1.32.117
+backcall==0.2.0
 bcrypt==4.2.0
-fastapi==0.114.2
+beautifulsoup4==4.12.3
+biopython==1.83
+bleach==6.1.0
+blinker==1.7.0
+boto3==1.34.8
+botocore==1.34.117
+brain-isotopic-distribution==1.5.17
+cachetools==5.3.2
+captcha==0.6.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+configobj==5.0.8
+contourpy==1.2.0
+cptac==1.5.14
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.8
+docopt==0.6.2
+docutils==0.16
+easypqp==0.1.47
+et-xmlfile==1.1.0
+executing==2.0.1
+extra-streamlit-components==0.1.71
+fastapi==0.114.1
+fastjsonschema==2.19.1
+fonttools==4.47.0
+gitdb==4.0.11
+GitPython==3.1.42
+glypy==1.0.12
+greenlet==3.0.3
+h11==0.14.0
+hjson==3.1.0
+idna==3.6
+importlib-metadata==7.0.1
+ipykernel==6.29.4
+ipython==8.12.3
+jedi==0.19.1
+Jinja2==3.1.3
+jmespath==1.0.1
+joblib==1.3.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.5
+llvmlite==0.42.0
+lxml==4.9.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib==3.8.2
-matplotlib_venn==0.11.10
+matplotlib-inline==0.1.6
+matplotlib-venn==0.11.10
+mdurl==0.1.2
+mistune==3.0.2
+mpmath==1.3.0
+ms-peak-picker==0.1.45
+ms_deisotope==0.0.54
+natsort==8.4.0
+nbclient==0.10.0
+nbconvert==7.16.2
+nbformat==5.10.2
+ncls==0.0.68
+nest-asyncio==1.6.0
+npm==0.1.1
+numba==0.59.1
+numpy==1.26.4
+openpyxl==3.1.2
+optional-django==0.1.0
+packaging==23.2
 pandas==2.0.3
+pandocfilters==1.5.1
+parso==0.8.3
+patsy==0.5.6
+pickleshare==0.7.5
+Pillow==10.1.0
+pipreqs==0.5.0
+platformdirs==4.2.0
+prompt_toolkit==3.0.47
+protobuf==4.25.3
+psims==1.3.3
+psutil==5.9.8
 psycopg2==2.9.9
-python_bcrypt==0.3.2
-Requests==2.32.3
+pure-eval==0.2.2
+pyarrow==15.0.0
+pyasn1==0.6.0
+pydantic==2.9.1
+pydantic_core==2.23.3
+pydeck==0.8.1b0
+Pygments==2.17.2
+PyJWT==2.9.0
+pyopenms==3.1.0
+pyparsing==3.1.1
+pyranges==0.1.2
+pyteomics==4.6.3
+python-dateutil==2.8.2
+python-decouple==3.8
+python-idzip==0.3.9
+python-multipart==0.0.9
+pytz==2023.3.post1
+pywin32==306
+PyYAML==6.0.1
+pyzmq==25.1.2
+pyzstd==0.16.0
+referencing==0.33.0
+requests==2.31.0
+rich==13.7.0
+rpds-py==0.18.0
+rsa==4.7.2
+s3transfer==0.10.0
+scikit-learn==1.3.2
+scipy==1.11.4
+seaborn==0.13.2
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+sorted-nearest==0.0.39
+soupsieve==2.5
+SQLAlchemy==2.0.31
+stack-data==0.6.3
+starlette==0.38.5
+statsmodels==0.14.2
 streamlit==1.38.0
-streamlit_option_menu==0.3.13
+streamlit-aggrid==0.3.4.post3
+streamlit-authenticator==0.3.3
+streamlit-lottie==0.0.5
+streamlit-option-menu==0.3.13
+sympy==1.12
+tabulate==0.9.0
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tinycss2==1.2.1
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
 tqdm==4.66.1
+traitlets==5.14.2
+typing_extensions==4.9.0
+tzdata==2023.3
+tzlocal==5.2
+urllib3==2.0.7
+uvicorn==0.30.6
+validators==0.22.0
+watchdog==4.0.0
+wcwidth==0.2.13
+webencodings==0.5.1
+XlsxWriter==3.2.0
+yarg==0.1.9
+zipp==3.17.0
